--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.540.0",
     "react": "^19.1.1",
+    "react-barcode": "^1.6.1",
     "react-dom": "^19.1.1",
     "react-qr-code": "^2.0.18",
+    "react-router-dom": "^7.8.1",
     "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
